url feature fix

--- a/change.html
+++ b/change.html
@@ -4,7 +4,7 @@
 <style>
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="./custom_string.js"></script>
+<script src="https://rawgithub.com/webcat12345/web_store/master/custom_string.js"></script>
 
 </head>
 <body>
